# fireplace

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: auth.rs  emulator.rs  hello.rs
src/: error.rs  firestore.rs  lib.rs  main.rs  service_account.rs  token.rs  utils.rs
src/auth/: credential.rs  error.rs  mod.rs  models.rs  test_helpers.rs  token.rs
src/auth/credential/: api_auth_token.rs  mod.rs  public_keys.rs  token_handler.rs
src/auth/models/: mod.rs  update_user.rs
src/firestore/: client.rs  mod.rs  query.rs  reference.rs  serde.rs  test_helpers.rs  token_provider.rs
src/firestore/client/: mod.rs  options.rs
src/firestore/serde/: deserialize.rs  mod.rs  serialize.rs
tests/: create_document.rs
